# bsv-mpc

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DECISIONS.md  Dockerfile  EXECUTION-PLAN.md  INTEGRATION.md  LESSONS.md  NEXT-SESSION-PROMPT.md  PERSON-A-HANDOFF.md  POCS.md  PROGRESS-PERSON-A.md  README.md  SPECS.md  STATUS.md  TESTING.md  deny.toml
crates/bsv-mpc-client/: Cargo.toml
crates/bsv-mpc-client/src/: chain.rs  client.rs  error.rs  ffi.rs  keystore.rs  lib.rs  signer.rs  storage.rs  transport.rs  txbuild.rs  wasm.rs
crates/bsv-mpc-client/tests/: aux_reuse_4of6_relay_e2e.rs  deployed_4of6_capstone_mainnet_e2e.rs  deployed_recover_e2e.rs  deployed_sign_e2e.rs  dkg_4of6_multiindex_relay_e2e.rs  ecdh_relay_e2e.rs  hermetic_sign.rs  identity_resolution_e2e.rs  issue98_current_thread_repro_e2e.rs  mitm_gate_85_signed_identity.rs  presign_sign_4of6_multiindex_relay_e2e.rs  wasm32_txbuild.rs
crates/bsv-mpc-core/: Cargo.toml
crates/bsv-mpc-core/src/: CLAUDE.md  approval.rs  aux_binding.rs  brc31_client.rs  canonical.rs  custody.rs  dkg.rs  ecdh.rs  envelope.rs  error.rs  hd.rs  lib.rs  paillier_pool.rs  policy.rs  presig_at_rest.rs  presig_encryption.rs  presig_timing.rs  presigning.rs  primes_at_rest.rs  proof.rs  recovery.rs  recovery_health.rs  refresh.rs  refresh_coordinator.rs  reshar_coordinator.rs  share.rs  signing.rs  types.rs
crates/bsv-mpc-core/tests/: aux_binding_neg.rs  conformance_02_execution_id.rs  conformance_03_brc42_invoice.rs  conformance_04_session_id.rs  conformance_05_message_envelope.rs  conformance_06_presig_bundle_encryption.rs  conformance_07_brc31_auth.rs  conformance_07b_brc31_auth_vector.rs  conformance_09_canonical_render.rs  conformance_09_rendered_text.rs  conformance_09b_policy.rs  conformance_09c_policy_vector.rs  conformance_18_recovery_kdf.rs  device_holds_combine_kernel.rs  poc_4of6_device_holds_3.rs  poc_4of6_device_holds_presig_relay.rs  policy_mainnet_strict_red.rs  recovery_sign_after_reshare.rs  wasm32_dkg.rs
crates/bsv-mpc-messagebox/: Cargo.toml
crates/bsv-mpc-messagebox/src/: auth.rs  client.rs  error.rs  http.rs  lib.rs  subscribe.rs  transport_native.rs  transport_socketio.rs  transport_wasm.rs  types.rs  wire.rs  ws.rs
crates/bsv-mpc-messagebox/tests/: api_surface.rs  live_relay_proof.rs  transport_native_handshake.rs
crates/bsv-mpc-overlay/: Cargo.toml
crates/bsv-mpc-overlay/src/: CLAUDE.md  chip.rs  discovery.rs  error.rs  lib.rs  proofs.rs  types.rs
crates/bsv-mpc-overlay/tests/: integration.rs
crates/bsv-mpc-proxy/: Cargo.toml
crates/bsv-mpc-proxy/src/: CLAUDE.md  bridge.rs  burn_rate.rs  config.rs  error.rs  fee_injector.rs  lib.rs  main.rs  presign_manager.rs  relay_approval.rs  relay_presign.rs  relay_refresh.rs  relay_reshare.rs  relay_sign.rs  server.rs  storage.rs  utxo_tracker.rs  wallet_api.rs
crates/bsv-mpc-proxy/tests/: concurrency_stress_e2e.rs  container_hd_relay_deployed_mainnet_e2e.rs  container_presign_bundle_sign_e2e.rs  container_refresh_deployed_mainnet_e2e.rs  container_reshare_deployed_mainnet_e2e.rs  container_sec0617_deployed_mainnet_e2e.rs  createaction_4of6_device_holds_relay_mainnet_e2e.rs  createaction_approval_gate_mainnet_e2e.rs  createaction_multi_input_relay_mainnet_e2e.rs  createaction_relay_mainnet_e2e.rs  custody_restart_survival_e2e.rs  deploy_smoke_e2e.rs  dkg_over_http_local_e2e.rs  i5_real_sats_deployed_e2e.rs  policy_gate_red_e2e.rs  policy_loader_red_e2e.rs  presign_noncontiguous_02_realrelay_e2e.rs  presign_noncontiguous_02_repro.rs  presign_noncontiguous_02_reshared_realrelay_e2e.rs  presign_relay_deployed_e2e.rs  primes_at_rest_deployed_e2e.rs  provision_via_service_deployed_e2e.rs  proxy_enforced_cosigner_e2e.rs  rate_limit_deployed_e2e.rs  recovery_spend_deployed_mainnet_e2e.rs  relay_combine_deployed_e2e.rs  relay_sign_bench_e2e.rs  self_stocking_loop_e2e.rs  service_owner_authz_e2e.rs  sign_relay_authed_deployed_e2e.rs
crates/bsv-mpc-relay/: Cargo.toml
crates/bsv-mpc-relay/src/: dkg.rs  ecdh.rs  lib.rs  presign.rs  provision_aux.rs  provision_dkg.rs  provision_presign.rs  reshare.rs  session.rs
crates/bsv-mpc-service/: Cargo.toml
crates/bsv-mpc-service/src/: CLAUDE.md  auth.rs  aux_setup_handlers.rs  custody.rs  dkg_handler.rs  dkg_relay_handlers.rs  durable_store.rs  ecdh_relay_handler.rs  handlers.rs  index.rs  lib.rs  main.rs  messagebox.rs  presign_handler.rs  provision.rs  rate_limit.rs  refresh_handler.rs  refresh_relay_handlers.rs  relay_handlers.rs  reshar_handler.rs  reshare_relay_handlers.rs  sign_relay_handler.rs  signing_handler.rs  storage.rs
crates/bsv-mpc-service/tests/: composite_custody_restart_e2e.rs  dkg_2of3_via_messagebox_e2e.rs  dkg_4of6_via_messagebox_e2e.rs  dkg_relay_peer_identity_unit.rs  dkg_relay_route_unit.rs  dkg_via_messagebox_e2e.rs  messagebox_listener_e2e.rs  orphan_cleanup_e2e.rs  presign_2of2_via_messagebox_e2e.rs  presign_early_return_share_repro.rs  presign_sessionid_hardening_e2e.rs  refresh_2of2_via_messagebox_e2e.rs  reshar_3of4_to_4of6_via_messagebox_e2e.rs  reshar_full_2of2_to_2of3_via_messagebox_e2e.rs  reshar_phaseA_delayed_party0_e2e.rs  round_handler_auth_e2e.rs  share_metadata_auth_e2e.rs  sign_from_bundle_hermetic_e2e.rs  sign_mainnet_presig_consume_e2e.rs  sign_mainnet_via_messagebox_e2e.rs  sign_relay_deployed_e2e.rs  (+2 more)
crates/bsv-mpc-worker/: Cargo.toml  wrangler.example.toml  wrangler.toml.example
docs/: SCALING.md  (+43 more)
poc/poc-cf-container/: .dockerignore  Cargo.toml  Dockerfile  package.json  worker.js  wrangler.jsonc
poc/poc10-cf-worker-https/: Cargo.toml
poc/poc12-three-of-five/: Cargo.toml
poc/poc14-overlay-discovery/: Cargo.toml
poc/poc15-capstone/: Cargo.toml
poc/poc16-sm-inline/: Cargo.toml  README.md
poc/poc17-cf-outbound-ws/: Cargo.toml  README.md  package.json  wrangler.example.toml
poc/poc2-wasm/: Cargo.toml  run_benchmark.mjs
poc/poc3-key-derivation/: Cargo.toml
poc/poc4-real-tx/: Cargo.toml  tx_log.txt
poc/poc5-http-latency/: Cargo.toml
poc/poc6-toolbox-dep/: Cargo.toml
poc/poc8-brc31-auth/: Cargo.toml
poc/poc9-encrypt-decrypt/: Cargo.toml
(+103 files in other folders)
