[package]
name = "bsv-mpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/bsv-mpc-core",
    "crates/bsv-mpc-proxy",
    "crates/bsv-mpc-worker",
    "crates/bsv-mpc-service",
    "crates/bsv-mpc-overlay",
]
exclude = [
    "cggmp21-fork",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/bsv-mpc"

# Root crate dependencies (for integration tests)
[dependencies]

[dev-dependencies]
bsv-mpc-core = { path = "crates/bsv-mpc-core" }
bsv-mpc-proxy = { path = "crates/bsv-mpc-proxy" }
bsv-mpc-service = { path = "crates/bsv-mpc-service" }

# MPC crypto (for DKG simulation in E2E tests)
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "backend-num-bigint"] }
round-based = { version = "0.4.1", features = ["sim", "state-machine"] }
generic-ec = { version = "0.4.1", features = ["curve-secp256k1", "serde"] }

# BSV SDK
bsv = { package = "bsv-rs", version = "0.3.0", features = ["transaction", "wallet"] }

# HTTP + async
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Utilities
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1"
futures = "0.3"

[workspace.dependencies]
# MPC crypto
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10"] }
cggmp24-keygen = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["hd-wallet"] }

# MPC protocol infrastructure (must match cggmp24's transitive deps)
round-based = { version = "0.4.1", features = ["state-machine"] }
generic-ec = { version = "0.4.1", features = ["curve-secp256k1", "serde"] }
generic-ec-zkp = { version = "0.4", features = ["alloc"] }

# BSV
bsv = { package = "bsv-rs", version = "0.3.0", features = ["transaction", "wallet"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"

# Async utilities
futures = "0.3"
pin-project = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Temp/test
tempfile = "3"

# Pin glass_pumpkin to avoid rand_core 0.6/0.10 version conflict with fast-paillier.
# See LESSONS.md for details. All POCs pin this individually; workspace must too.
glass_pumpkin = "=1.9.0"

[patch.crates-io]
bsv-rs = { path = "../bsv-rs" }

# Override cggmp24 with local fork that exposes set_additive_shift() for BRC-42.
# See ~/bsv/cggmp21-fork/cggmp24/src/signing.rs (brc42-additive-shift branch).
[patch."https://github.com/LFDT-Lockness/cggmp21"]
cggmp24 = { path = "./cggmp21-fork/cggmp24" }
cggmp24-keygen = { path = "./cggmp21-fork/cggmp24-keygen" }
key-share = { path = "./cggmp21-fork/key-share" }
paillier-zk = { path = "./cggmp21-fork/paillier-zk" }

# Optimize big-integer and crypto dependencies in dev mode.
# Without this, num-bigint / Paillier operations are 10-100x slower, making
# DKG aux_info_gen take minutes instead of seconds in tests.
[profile.dev.package."*"]
opt-level = 2
