[package]
name = "bsv-mpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/bsv-mpc-core",
    "crates/bsv-mpc-messagebox",
    "crates/bsv-mpc-proxy",
    "crates/bsv-mpc-worker",
    "crates/bsv-mpc-service",
    "crates/bsv-mpc-overlay",
    "poc/poc16-sm-inline",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/bsv-mpc"

# Root crate dependencies (for integration tests)
[dependencies]

[dev-dependencies]
bsv-mpc-core = { path = "crates/bsv-mpc-core" }
bsv-mpc-proxy = { path = "crates/bsv-mpc-proxy" }
bsv-mpc-service = { path = "crates/bsv-mpc-service" }
bsv-mpc-overlay = { path = "crates/bsv-mpc-overlay" }

# MPC crypto (for DKG simulation in E2E tests)
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "backend-num-bigint", "insecure-assume-preimage-known"] }
round-based = { version = "0.4.1", features = ["sim", "state-machine"] }
generic-ec = { version = "0.5", features = ["curve-secp256k1", "serde"] }

# BSV SDK
bsv = { package = "bsv-rs", version = "0.3.7", features = ["transaction", "wallet"] }

# HTTP + async
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Utilities
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1"
futures = "0.3"

[workspace.dependencies]
# MPC crypto. `insecure-assume-preimage-known` is REQUIRED for BSV-correct
# signing — BSV sighashes are pre-hashed (sha256(sha256(sighash_preimage))),
# and without this feature the only way to construct DataToSign is via
# DataToSign::digest::<Sha256>(message) which re-hashes the sighash and
# produces signatures that don't verify against any BSV transaction. The
# feature unlocks PrehashedDataToSign::insecure_assume_preimage_known()
# which is safe for our use because the "preimage" the security warning
# is about IS the BSV transaction (always known to us, never adversary-
# chosen) — see cggmp24/src/signing.rs:63-149 + eprint 2021/1330 §1.1.2
# for the attack the warning protects against (signature forgery via
# attacker-chosen raw hash + presignature public components — irrelevant
# when the hash is a transaction sighash that requires SHA-256 preimage
# resistance to forge). Also gates the 1-round presigned signing path
# (signing.rs:221 TODO). Mirrors rust-mpc which already has it enabled.
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "insecure-assume-preimage-known"] }
cggmp24-keygen = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["hd-wallet"] }

# MPC protocol infrastructure (must match cggmp24's transitive deps)
round-based = { version = "0.4.1", features = ["state-machine"] }
generic-ec = { version = "0.5", features = ["curve-secp256k1", "serde"] }
generic-ec-zkp = { version = "0.5", features = ["alloc"] }

# BSV
bsv = { package = "bsv-rs", version = "0.3.7", features = ["transaction", "wallet"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"

# Async utilities
futures = "0.3"
pin-project = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Temp/test
tempfile = "3"

# Pin glass_pumpkin to avoid rand_core 0.6/0.10 version conflict with fast-paillier.
# See LESSONS.md for details. All POCs pin this individually; workspace must too.
#
# NOTE 2026-05-17: glass_pumpkin 1.9.0 requires core2 ^0.4 but core2 0.4.0 was
# yanked from crates.io. The committed Cargo.lock pins the yanked version,
# which cargo will still install (yanked = hidden from fresh resolve, not
# deleted). Bumping to 1.10.0 breaks fast-paillier (rand_core::RngCore vs
# rand_core::Rng trait mismatch); needs a coordinated fast-paillier bump
# upstream first. Tracked as follow-up.
glass_pumpkin = "=1.9.0"

# For local bsv-rs development, add to ~/.cargo/config.toml or an untracked
# Cargo.toml override:
#   [patch.crates-io]
#   bsv-rs = { path = "../bsv-rs" }

# Override cggmp24 with the upstream PR #200 branch on the PUBLIC Calhooon
# fork that exposes set_additive_shift() for BRC-42-derived key signing.
#
#   https://github.com/LFDT-Lockness/cggmp21/pull/200 (open, mergeable)
#     "Expose set_additive_shift on SigningBuilder for HMAC-based HD derivation"
#     branch: brc42-additive-shift on Calhooon/cggmp21
#     commit: 6c6421ee38687db0d2535f06b225f3073e5aa399 (2026-05-11)
#
# Pinned to commit `rev` (not branch) for reproducibility. When the upstream
# PR lands, swap to a published cggmp24 version and remove this [patch] block.
#
# Was previously path-based via a private git submodule at ./cggmp21-fork
# pointing at B1nary-Calhoun-Partnership/cggmp21-fork. The private submodule
# broke CI checkout from the public partnership bsv-mpc repo (runners cannot
# clone private partnership-org repos with the default GITHUB_TOKEN). Switching
# to the public Calhooon-org fork resolves that without keeping any submodule.
[patch."https://github.com/LFDT-Lockness/cggmp21"]
cggmp24 = { git = "https://github.com/Calhooon/cggmp21", rev = "6c6421ee38687db0d2535f06b225f3073e5aa399" }
cggmp24-keygen = { git = "https://github.com/Calhooon/cggmp21", rev = "6c6421ee38687db0d2535f06b225f3073e5aa399" }
key-share = { git = "https://github.com/Calhooon/cggmp21", rev = "6c6421ee38687db0d2535f06b225f3073e5aa399" }
paillier-zk = { git = "https://github.com/Calhooon/cggmp21", rev = "6c6421ee38687db0d2535f06b225f3073e5aa399" }

# Optimize big-integer and crypto dependencies in dev mode.
# Without this, num-bigint / Paillier operations are 10-100x slower, making
# DKG aux_info_gen take minutes instead of seconds in tests.
[profile.dev.package."*"]
opt-level = 2
