[package]
name = "bsv-mpc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Greenfield native (iOS/Android via UniFFI) + web (wasm-bindgen) client for bsv-mpc threshold signing. Wraps bsv-mpc-core; zero rust-mpc / 100cash dependency (issue #41)."

# `lib` for in-workspace use + tests; `cdylib`/`staticlib` for the FFI artifacts
# (UniFFI dylib + iOS staticlib, wasm-bindgen cdylib).
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# `native` turns on the UniFFI skin (iOS/Android shells). Off by default so the
# pure lib + the wasm build never pull uniffi. See docs/41-CLIENT-PLAN.md.
native = ["dep:uniffi"]

[dependencies]
# The one allowed in-workspace dependency — the wasm-safe MPC primitives we wrap.
bsv-mpc-core = { path = "../bsv-mpc-core" }

# Unsealed secrets are held only as Zeroizing<T> (wiped on drop). Matches the
# core accessors (decrypt_share / derive_share_encryption_key) hardened this cycle.
zeroize.workspace = true

# `?Send` async traits — host callbacks (wasm JS closures / UniFFI foreign traits) are !Send.
async-trait = "0.1"

# UniFFI skin (native feature only). 0.28 proc-macro mode — no .udl file.
uniffi = { version = "0.28", features = ["cli"], optional = true }

serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true

# Native-only UniFFI bindgen helper (generates Swift/Kotlin from the built dylib).
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["native"]

[dev-dependencies]
# Native-only test executor for the async trait round-trips (not in the wasm lib build).
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
# Used by the tests/ integration binaries (hex-encode goldens; serde for shares).
hex.workspace = true
serde_json.workspace = true

# Native-only: the signer hot-path test builds a REAL cggmp24 2-of-2 share via
# trusted_dealer (fast — no DKG/Paillier) to prove unseal → parse_share_scalar.
# Gated to native in-source (`cfg(not(target_arch="wasm32"))`), so they never
# enter the wasm build.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# `spof` enables cggmp24::trusted_dealer (mirrors bsv-mpc-core's dev-dep).
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "spof"] }
generic-ec.workspace = true
rand.workspace = true
# The hermetic 2-party sign test (tests/hermetic_sign.rs) runs a real DKG+aux via
# the round_based simulator and verifies the resulting signature with the BSV SDK.
round-based = { workspace = true, features = ["sim"] }
futures.workspace = true
pin-project.workspace = true
bsv = { workspace = true }
# Mainnet capstone E2E (gated E2E_MAINNET=1): fund via wallet:3321, broadcast via ARC, confirm on WoC.
reqwest = { version = "0.12", features = ["json"] }

# wasm-bindgen skin (web client). wasm32-only — the native build never sees it,
# so no feature flag is needed; the `wasm` module is `cfg(target_arch="wasm32")`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# wasm32-only: the #[wasm_bindgen_test] harness (run via
# `wasm-pack test --node -p bsv-mpc-client`). getrandom/js LINKs the wasm test
# binary. Mirrors bsv-mpc-core.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
