[package]
name = "bsv-mpc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Greenfield native (iOS/Android via UniFFI) + web (wasm-bindgen) client for bsv-mpc threshold signing. Wraps bsv-mpc-core; zero rust-mpc / 100cash dependency (issue #41)."

# `lib` for in-workspace use + tests; `cdylib`/`staticlib` for the FFI artifacts
# (UniFFI dylib + iOS staticlib, wasm-bindgen cdylib).
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# `native` turns on the UniFFI skin (iOS/Android shells). Off by default so the
# pure lib + the wasm build never pull uniffi. See docs/41-CLIENT-PLAN.md.
native = ["dep:uniffi"]

[dependencies]
# The one allowed in-workspace dependency — the wasm-safe MPC primitives we wrap.
bsv-mpc-core = { path = "../bsv-mpc-core" }

# Unsealed secrets are held only as Zeroizing<T> (wiped on drop). Matches the
# core accessors (decrypt_share / derive_share_encryption_key) hardened this cycle.
zeroize.workspace = true

# `?Send` async traits — host callbacks (wasm JS closures / UniFFI foreign traits) are !Send.
async-trait = "0.1"

# UniFFI skin (native feature only). 0.28 proc-macro mode — no .udl file.
# `tokio` enables the async-runtime adapter for `#[uniffi::export(async_runtime =
# "tokio")]` on the high-level async `sign()` (#63) + the BRC-103/104 storage conn
# (#64), whose transports need a real reactor; the native shells link a tokio rt.
uniffi = { version = "0.28", features = ["cli", "tokio"], optional = true }

serde.workspace = true
serde_json.workspace = true
# ADR-0044 / #75 `ffi_canonical_render` accepts a CBOR-encoded `Intent` from
# the native shell (matches the typed serde derives on `bsv_mpc_core::approval::Intent`).
ciborium.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true

# Native-only UniFFI bindgen helper (generates Swift/Kotlin from the built dylib).
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["native"]

# ─── Native-io: the deployed-cosigner sign ceremony (#63) ────────────────────
# The native default backing of the injected seams (handoff §4.5 Decision 2):
# the §06.17.1 presign-over-relay + sign-from-bundle ceremony against the deployed
# cosigner, reusing the EXACT mainnet-proven shared crates. Native-only (gated
# `cfg(not(target_arch="wasm32"))` in `src/native_io/`), so the wasm build never
# pulls tokio/reqwest/tokio-tungstenite.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# #63 sign seam — the deployed-cosigner ceremony reuses the shared crates.
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
bsv-mpc-relay = { path = "../bsv-mpc-relay" }
bsv-mpc-service = { path = "../bsv-mpc-service" }
# bsv-rs with `auth` (= wallet+messages+tokio) for the #64 BRC-103/104 storage
# client; `wallet`/`transaction` for the #63 EC primitives + tx + pre-flight verify.
bsv = { package = "bsv-rs", version = "0.3.13", features = ["auth", "wallet", "transaction"] }
# Portable native HTTP — replaces worker::Fetch (#64) + drives the relay triggers
# (#63). rustls-tls (no OpenSSL) for a clean iOS/Android cross-build.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = { workspace = true }
# Native-only direct tokio: `ffi_prime_pool_backfill` (#100 / Lever C) offloads the
# CPU-bound safe-prime gen to `tokio::task::spawn_blocking` so the uniffi async
# runtime workers stay free. The native shells already link a real tokio runtime
# (the `uniffi` `tokio` feature, line ~34); `rt` provides `spawn_blocking`.
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
# wasm-SAFE base executor (the wasm32 test build sees only this — `net`/`mio` would
# fail to compile to wasm32). The heavy features the deployed-cosigner E2E needs
# (rt-multi-thread/time/net) are added in the native-only dev-deps below.
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
# Used by the tests/ integration binaries (hex-encode goldens; serde for shares).
hex.workspace = true
serde_json.workspace = true

# Native-only: the signer hot-path test builds a REAL cggmp24 2-of-2 share via
# trusted_dealer (fast — no DKG/Paillier) to prove unseal → parse_share_scalar.
# Gated to native in-source (`cfg(not(target_arch="wasm32"))`), so they never
# enter the wasm build.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Heavy native runtime for the deployed-cosigner E2E (relay WebSocket + ceremony
# timers run on the ambient runtime). Unioned with the wasm-safe base tokio above;
# kept out of the wasm32 build so `mio`/`net` never have to compile to wasm.
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "sync"] }
# `spof` enables cggmp24::trusted_dealer (mirrors bsv-mpc-core's dev-dep).
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "spof"] }
generic-ec.workspace = true
rand.workspace = true
# The hermetic 2-party sign test (tests/hermetic_sign.rs) runs a real DKG+aux via
# the round_based simulator and verifies the resulting signature with the BSV SDK.
round-based = { workspace = true, features = ["sim"] }
futures.workspace = true
pin-project.workspace = true
bsv = { workspace = true }
# Mainnet capstone E2E (gated E2E_MAINNET=1): fund via wallet:3321, broadcast via ARC, confirm on WoC.
reqwest = { version = "0.12", features = ["json"] }
# #69 PR-2 step-5b multi-index DKG e2e spins an IN-PROCESS bsv-mpc-service container
# (build_router + AppState) to arm {3,4,5} over the relay — needs the axum server,
# chrono (AppState.started_at), and a tracing subscriber for --nocapture diagnostics.
axum.workspace = true
chrono.workspace = true
tracing-subscriber = { workspace = true }

# wasm-bindgen skin (web client). wasm32-only — the native build never sees it,
# so no feature flag is needed; the `wasm` module is `cfg(target_arch="wasm32")`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# wasm32-only: the #[wasm_bindgen_test] harness (run via
# `wasm-pack test --node -p bsv-mpc-client`). getrandom/js LINKs the wasm test
# binary. Mirrors bsv-mpc-core.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
