[package]
name = "bsv-mpc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core MPC threshold ECDSA signing protocol for BSV (wraps cggmp24)"

[dependencies]
cggmp24.workspace = true
cggmp24-keygen.workspace = true
round-based.workspace = true
generic-ec.workspace = true
generic-ec-zkp.workspace = true
bsv.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
aes-gcm.workspace = true
glass_pumpkin.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
futures.workspace = true
pin-project.workspace = true
round-based = { workspace = true, features = ["sim"] }
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "spof"] }
