[package]
name = "bsv-mpc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core MPC threshold ECDSA signing protocol for BSV (wraps cggmp24)"

[dependencies]
cggmp24.workspace = true
cggmp24-keygen.workspace = true
round-based.workspace = true
generic-ec.workspace = true
generic-ec-zkp.workspace = true
bsv.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
base64.workspace = true
aes-gcm.workspace = true
glass_pumpkin.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
# tokio is used ONLY for `#[tokio::test]` in the in-file unit tests (dkg.rs,
# signing.rs, presigning.rs, refresh.rs). That macro needs only `rt` +
# `macros`; the test bodies do not use tokio::time / tokio::sync / tokio::net
# / tokio::fs. Specifying `default-features = false` here is deliberate: it
# avoids inheriting the workspace's `full` features, which would pull `net`
# → `mio` and break the wasm32-unknown-unknown test build (mio's UNIX FD
# code does not compile on wasm32). Confirmed empirically 2026-05-19
# (Phase G Step 5b).
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tempfile.workspace = true
futures.workspace = true
pin-project.workspace = true
# §07 BRC-31 conformance harness (tests/conformance_07_brc31_auth.rs). Pins the
# FIXED canonical server verifier (public Calhooon repo, fix branch) via git rev
# — CI-safe (public), reproducible. Swap to a crates.io version after the fix is
# published (post Phase C real-sats). Pulls bsv-rs `auth` (additive) into the
# dev/test graph only; no http/socketio/reqwest. See bsv-mpc #8.
bsv-middleware-rs = { git = "https://github.com/Calhooon/bsv-middleware-rs", rev = "61e1f4948d150dfb217ea5fdd22ad73c2b267bc7" }
round-based = { workspace = true, features = ["sim"] }
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "spof"] }

# wasm32-only dev-deps for tests/wasm32_dkg.rs (Phase G Step 5b runtime gate).
# - wasm-bindgen-test: the `#[wasm_bindgen_test]` harness, run via
#   `wasm-pack test --node -p bsv-mpc-core`.
# - getrandom/js: required to LINK the wasm32-unknown-unknown test binary.
#   bsv-mpc-core's rlib build (G-5a) doesn't need it (rlib doesn't link),
#   but a test binary does. Without `js`, wasm32 link fails with
#   "the wasm*-unknown-unknown targets are not supported by default".
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
