[package]
name = "bsv-mpc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core MPC threshold ECDSA signing protocol for BSV (wraps cggmp24)"

[dependencies]
cggmp24.workspace = true
cggmp24-keygen.workspace = true
round-based.workspace = true
generic-ec.workspace = true
generic-ec-zkp.workspace = true
# `auth` (additive over the workspace transaction+wallet features) is required by
# the canonical BRC-31 client (`brc31_client.rs`): it signs a General message via
# `bsv::auth::AuthMessage` + `ProtoWallet`, exactly as `bsv_rs::auth::Peer` does.
bsv = { package = "bsv-rs", version = "0.3.11", features = ["transaction", "wallet", "auth"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
base64.workspace = true
aes-gcm.workspace = true
glass_pumpkin.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true

# Canonical BRC-104 wire helpers (`build_request_payload` / `filter_signable_headers`)
# used by the canonical BRC-31 client (`brc31_client.rs`). Pinned to the FIXED
# canonical server verifier rev (public Calhooon repo). NATIVE-ONLY: the worker
# (wasm32) does not use `brc31_client`, and pulling this in would add a second
# `getrandom` (0.4) into the wasm graph that the worker doesn't configure. Gated
# off wasm keeps the worker's wasm build byte-for-byte unchanged. The module is
# `#[cfg(not(target_arch = "wasm32"))]` in lib.rs to match.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bsv-middleware-rs = { git = "https://github.com/Calhooon/bsv-middleware-rs", rev = "61e1f4948d150dfb217ea5fdd22ad73c2b267bc7" }

[dev-dependencies]
# tokio is used ONLY for `#[tokio::test]` in the in-file unit tests (dkg.rs,
# signing.rs, presigning.rs, refresh.rs). That macro needs only `rt` +
# `macros`; the test bodies do not use tokio::time / tokio::sync / tokio::net
# / tokio::fs. Specifying `default-features = false` here is deliberate: it
# avoids inheriting the workspace's `full` features, which would pull `net`
# → `mio` and break the wasm32-unknown-unknown test build (mio's UNIX FD
# code does not compile on wasm32). Confirmed empirically 2026-05-19
# (Phase G Step 5b).
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tempfile.workspace = true
futures.workspace = true
pin-project.workspace = true
round-based = { workspace = true, features = ["sim"] }
cggmp24 = { git = "https://github.com/LFDT-Lockness/cggmp21", features = ["curve-secp256k1", "hd-wallet", "hd-slip10", "spof"] }

# wasm32-only dev-deps for tests/wasm32_dkg.rs (Phase G Step 5b runtime gate).
# - wasm-bindgen-test: the `#[wasm_bindgen_test]` harness, run via
#   `wasm-pack test --node -p bsv-mpc-core`.
# - getrandom/js: required to LINK the wasm32-unknown-unknown test binary.
#   bsv-mpc-core's rlib build (G-5a) doesn't need it (rlib doesn't link),
#   but a test binary does. Without `js`, wasm32 link fails with
#   "the wasm*-unknown-unknown targets are not supported by default".
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
