[package]
name = "bsv-mpc-messagebox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# ===========================================================================
# Target-agnostic dependencies ŌĆö used by the modules that compile on BOTH
# native and wasm32 (`engineio::codec`, `error`, `types`, `wire`). These
# carry NO tokio/reqwest/native-WS transitive baggage.
# ===========================================================================
[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }

# Async stream utilities (runtime-agnostic ŌĆö futures, not tokio).
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
base64.workspace = true

# Crypto (BRC-31 auth signature)
sha2.workspace = true

# RNG (BRC-31 nonces) ŌĆö wasm32 entropy comes from `getrandom/js` in the
# wasm32 target block below.
rand.workspace = true

# Async trait ŌĆö used by the target-agnostic `transport_socketio`
# `impl bsv::auth::Transport for SocketIoTransport` on BOTH targets.
async-trait = "0.1"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# URL helpers (target-agnostic)
url = "2"

# ===========================================================================
# Native target ŌĆö the existing raw-WS + BRC-104 SimplifiedFetchTransport
# path (`auth`, `client`, `http`, `ws`). Migrates onto Socket.IO +
# BRC-103 in H-4.3/H-4.4 but keeps these deps (tokio-tungstenite for the
# native WS, reqwest for the Engine.IO polling handshake).
# ===========================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# BSV SDK. `auth` for Peer/PeerOptions/SimplifiedFetchTransport;
# `http` so SimplifiedFetchTransport's reqwest backend compiles in;
# `socketio` for the upstream SocketIoTransport/SocketIoSink/
# SocketIoFrameSource/run_dispatch this crate consumes (H-4.4).
bsv = { workspace = true, features = ["auth", "http", "socketio"] }
tokio.workspace = true
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
chrono.workspace = true

# ===========================================================================
# wasm32 target ŌĆö the CF-Worker Socket.IO + BRC-103 path. The
# `transport_wasm` + `transport_socketio` modules (ported in H-4.3) use
# `web_sys::WebSocket` + `worker::Fetch`. `bsv` uses the `wasm` feature
# (NOT `http` ŌĆö reqwest doesn't compile to wasm32-unknown-unknown).
# ===========================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Declared directly (NOT workspace = true) so `default-features = false`
# + the `wasm` feature stay scoped to the wasm32 build ŌĆö the workspace
# `bsv` dep doesn't set default-features, so inheriting it would ignore
# our override (cargo warns + may hard-error in future). Pinned to the
# same 0.3.11 the workspace uses.
bsv = { package = "bsv-rs", version = "0.3.11", default-features = false, features = ["auth", "wallet", "transaction", "wasm", "socketio"] }
worker = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "MessageEvent", "CloseEvent", "Event", "BinaryType"]

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile.workspace = true
