[package]
name = "bsv-mpc-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BSV overlay network integration for MPC node discovery (SHIP/SLAP, BRC-22/23/24/25)"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
# Override workspace bsv to add overlay + http features needed for SHIP/SLAP
bsv = { package = "bsv-sdk", path = "../../../rust-sdk", features = ["transaction", "wallet", "overlay", "http"] }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
hex.workspace = true
futures.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["full"] }
