[package]
name = "bsv-mpc-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "BRC-100 compatible MPC signing proxy — drop-in replacement for bsv-wallet-cli"

[dependencies]
bsv-mpc-core = { path = "../bsv-mpc-core" }
bsv-mpc-messagebox = { path = "../bsv-mpc-messagebox" }
bsv.workspace = true
axum.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
rand.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow.workspace = true

[dev-dependencies]
# #12 relay-combiner deployed e2e: generate a real DKG + correlated presig pair
# (bsv-mpc-core public API) and serialize Presignature_A (needs the cggmp24 type).
cggmp24.workspace = true
# #4 provisioning e2e: exercise the native cosigner/container's
# ProvisionConfig::ship_presignature path (ships Presignature_A to the DO).
bsv-mpc-service = { path = "../bsv-mpc-service" }
